--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "react-avatar": "^4.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-modal": "^3.15.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-table": "^7.7.0",
+    "typeface-quicksand": "^1.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
