--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.0.0",
     "react-avatar": "^4.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.31.1",
     "react-icons": "^4.3.1",
     "react-modal": "^3.15.1",
     "react-router-dom": "^6.3.0",
